# TinyMLaaS-2023-winter

./: ..gitignore.swp  .coveragerc  .gitignore  00_core.html  Dockerfile  Dockerfile.x86  Makefile  README.md  TinyMLaaS.csv  TinyMLaaS.ipynb  TinyMLaaS.py  UserStory.md  app.robot  aws_s3.html  compiling.html  dataset.csv  docker-compose.yml  export.html  frontend.Dockerfile  hello_world.robot  hello_world_test.py  huggingface.md  image_sender.Dockerfile  index.html  inference.Dockerfile  installing.html  observing.html  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  training.html
.aws/: .credentials.swp  config  credentials
arduino/: Dockerfile
backend/: api_specification.yaml  setup.py
doc/: daily_10022023.md  daily_13022023.md  daily_15022023.md  sprint_planning_06022023.md
docs/: adding_datasets.html  architecture.html  how to demonstrate tinymlaas.html  how to install tinymlaas on the cloud.html  huggingface_deployment.html  installation_tinymlaas.html  known issues.html  repository_structure.html  software-project-summer-kick-off.html  supporting_new_devices.html  ui-guide.html  what to implement in the future.html
models/: model.tflite
nbs/: 00_core.ipynb  01_export.ipynb  Software-Project-Summer-Kick-off.ipynb  UI-guide.ipynb  aws_s3.ipynb  compiling.ipynb  index.ipynb  installing.ipynb  (+4 more)
rpi-pico/code/: CMakeLists.txt
rpi-pico/code/person_detection_screen/: CMakeLists.txt  detection_responder.cpp  image_provider.cpp  image_provider.h  main_functions.cpp  person_detect_model_data.cpp
rpi-pico/code/person_detection_screen/rpi_lib/arducam_s/: arducam_s.c  image.pio
(+64 files in other folders)
